
* Fixed memory-leak in chanlog_open(...). This occured only if global logtype
  failed to open logfile for writing.

* Fixed proceed_timer_safe -- it was possible to make it never trigger return
  code 2.

* Fixed bug that caused miau to free i_server.isupport[n] twice.

* Lots of portability-cleanup (strict typecasting, got rid of (most?)
  "if (foo)"s etc.)


0.5.2 - "fluffy little fellow"

* Fixed a bug that caused miau to segfault on rehash if bind was defined while
  listenhost was not.

* Message for dropping new client no longer contains garbage. Funny thing that
  neither valgrind nor electric fence caught this.

* Rehashing now complains about all missing and required items.

* Implemented timestamping for quicklog events (QLOGSTAMP).
  Option in miaurc: "timestamp", defines location of timestamp in quicklog
  events. May be one of "beginning", "end", or "none".

* Implemented channel logging like logging for private messages (PRIVLOG).
  Channel log is now CHANLOG. "log" in miaurc is now "chanlog".

* Logging finally handles "\1ACTION ...\1"s properly.

* "getnick" option (in miaurc) now takes "never", "detached", "attached" and
  "always" as an argument.

* Increased buffersize for error() and report(). Even server-error/kill should
  now fit in it.

* Split log.[ch] into log.[ch], chanlog.[ch] and privlog.[ch].

* Some parts of parser.c rewritten.

* Improved dump_status() :-)

* Code-cleanup.


0.5.1 - "y2k-compatible"

* Quitting miau resulted in deadlock when logging was compiled in but not
  defined in miaurc. Fixed.

* miau no longer tries to join channels when not connected.
  (There was one occasion this check wasn't done...)

* When randomized nick was in use, error message told
  "Nick 'foobar' unavailable - using 'foobar^^" while miau had nick
  'foobar^'. Fixed.

* Away-status is now set and unset properly. miau used to set/unset
  away-status even when it was not needed.
